grammar.js
		source_file: $ => seq(
			optional($.shebang_line),
			optional($.NLS),
			optional(seq(repeat1($.file_annotation))),
			optional($.package_header),
			repeat($.import_header),
			repeat(seq($._statement, $._semis)),
			optional($._statement)
		),

		_statement: $ => choice(
			$._declaration,
			seq(
				repeat(choice($.label, $.annotation)),
				choice(
					$.assignment,
					$._loop_statement,
					$._expression
				)
			)
		),

		_function_literal: $ => choice(
			$.lambda_literal,
			$.anonymous_function
		),

		_semis: $ => $.semis,
		semis: $ => choice(
			seq(
				repeat($.NLS),
				repeat1(seq(";", repeat($.NLS))),
			),
			repeat1($.NLS)
		),
		//_semis: $ => seq(optional($.NLS), repeat(seq(";", optional($.NLS)))),
		//parameter: $ => "parameter",





		//=================converted from antlr (expressions with some restrictions)==========================





		expression: $ => $._jumpExpression,

		disjunction: $ => seq(
			$.conjunction,
			repeat(seq(
				//optional($.NLS),
				$.DISJ,
				optional($.NLS),
				$.conjunction,
				optional($.NLS)
			))
		),

		conjunction: $ => seq(
			$.equality,
			repeat(seq(
				//optional($.NLS),
				$.CONJ,
				optional($.NLS),
				$.equality,
		        optional($.NLS)
			))
		),

		equality: $ => seq(
			$.comparison,
			repeat(seq(
				$.equalityOperator,
				optional($.NLS),
				$.comparison
			))
		),

		comparison: $ => seq(
			$.infixOperation,
			optional(seq(
				$.comparisonOperator,
				optional($.NLS),
				$.infixOperation
			))
		),

		infixOperation: $ => seq(
			$.elvisExpression,
			repeat(choice(
				seq(
					$.inOperator,
					optional($.NLS),
					$.elvisExpression
				),
				seq(
					$.isOperator,
					optional($.NLS),
					$.type
				)
			))
		),

		elvisExpression: $ => seq(
			$.infixFunctionCall,
			repeat(seq(
				//optional($.NLS),
				$.elvis,
				optional($.NLS),
				$.infixFunctionCall,
		        optional($.NLS)
			))
		),

		infixFunctionCall: $ => prec.right(seq(
			$.rangeExpression,
			repeat(seq(
				$.simpleIdentifier,
				optional($.NLS),
				$.rangeExpression
			))
		)),

		rangeExpression: $ => seq(
			$.additiveExpression,
			repeat(seq(
				$.RANGE,
				optional($.NLS),
				$.additiveExpression
			))
		),

		additiveExpression: $ => seq(
			$.multiplicativeExpression,
			repeat(seq(
				$.additiveOperator,
				optional($.NLS),
				$.multiplicativeExpression
			))
		),

		multiplicativeExpression: $ => seq(
			$.asExpression,
			repeat(seq(
				$.multiplicativeOperator,
				optional($.NLS),
				$.asExpression
			))
		),

		asExpression: $ => seq(
			$.prefixUnaryExpression,
			optional(seq(
				//optional($.NLS),
				$.asOperator,
				optional($.NLS),
				$.type
			))
		),

		prefixUnaryExpression: $ => seq(
			repeat($.unaryPrefix),
			$.postfixUnaryExpression
		),

		unaryPrefix: $ => prec.right(1, choice(
			$.annotation,
			$.label,
			seq(
				$.prefixUnaryOperator,
				optional($.NLS)
			)
		)),

		postfixUnaryExpression: $ => seq(
			$.primaryExpression,
			repeat(seq(
				$.postfixUnarySuffix,
			))
		),

		primaryExpression: $ => choice(
			$.parenthesizedExpression,
			$.simpleIdentifier,
			$.literalConstant,
			$.stringLiteral,
			$.callableReference,
			//$._function_literal,
			//$.object_literal,
			$.collectionLiteral,
			$.thisExpression,
			$.superExpression,
			//$.if_expression,
			//$.when_expression,
			//$.try_expression,
			// jumpExpression was move to the top, see expression rule
		),

		literalConstant: $ => choice(
			$.BooleanLiteral,
			$.IntegerLiteral,
			$.HexLiteral,
			$.BinLiteral,
			$.CharacterLiteral,
			$.RealLiteral,
			$.NullLiteral,
			$.LongLiteral,
			$.UnsignedLiteral
		),

		_jumpExpression: $ => prec.right(choice(
			$.disjunction,
			seq(
				$.THROW,
				optional($.NLS),
				$._jumpExpression,
			),
			seq(
				choice(
					$.RETURN,
					$.RETURN_AT,
				),
				optional($._jumpExpression),
			),
			$.CONTINUE,
			$.CONTINUE_AT,
			$.BREAK,
			$.BREAK_AT,
		)),

		additiveOperator: $ => choice(
			$.ADD,
			$.SUB
		),

		prefixUnaryOperator: $ => choice(
			$.INCR,
			$.DECR,
			$.SUB,
			$.ADD,
			$.excl
		),

		simpleIdentifier: $ => prec(PREC.SIMPLE_IDENTIDIER, choice(
			$.Identifier,
			$.ABSTRACT,
			$.ANNOTATION,
			$.BY,
			$.CATCH,
			$.COMPANION,
			$.CONSTRUCTOR,
			$.CROSSINLINE,
			$.DATA,
			$.DYNAMIC,
			$.ENUM,
			$.EXTERNAL,
			$.FINAL,
			$.FINALLY,
			$.GET,
			$.IMPORT,
			$.INFIX,
			$.INIT,
			$.INLINE,
			$.INNER,
			$.INTERNAL,
			$.LATEINIT,
			$.NOINLINE,
			$.OPEN,
			$.OPERATOR,
			$.OUT,
			$.OVERRIDE,
			$.PRIVATE,
			$.PROTECTED,
			$.PUBLIC,
			$.REIFIED,
			$.SEALED,
			$.TAILREC,
			$.SET,
			$.VARARG,
			$.WHERE,
			$.FIELD,
			$.PROPERTY,
			$.RECEIVER,
			$.PARAM,
			$.SETPARAM,
			$.DELEGATE,
			$.FILE,
			$.EXPECT,
			$.ACTUAL,
			$.CONST,
			$.SUSPEND
		)),
