corpus/comments.txt
==================
Comments
==================
1 + 2
// 1 + 2
/*
/* Hello world */
---

(source_file
  (expression
    (disjunction
      (conjunction
        (equality
          (comparison
            (infixOperation
              (elvisExpression
                (infixFunctionCall
                  (rangeExpression
                    (additiveExpression
                      (additiveExpression
                        (multiplicativeExpression
                          (asExpression
                            (prefixUnaryExpression
                              (postfixUnaryExpression
                                (primaryExpression
                                  (literalConstant
                                    (IntegerLiteral))))))))
                      (WS)
                      (additiveOperator
                        (ADD))
                      (WS)
                      (multiplicativeExpression
                        (asExpression
                          (prefixUnaryExpression
                            (postfixUnaryExpression
                              (primaryExpression
                                (literalConstant
                                  (IntegerLiteral)))))))))))))))))
  (semis
    (NLS)
    (Hidden)
    (NLS))
  (Hidden))
