corpus/literals.txt
==================
Simple identifiers
==================
helloWorld
---

(source_file 
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (simpleIdentifier 
                                  (Identifier ))))))))))))))))))

==================
Boolean literals
==================
true
false
---

(source_file 
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (BooleanLiteral )))))))))))))))))
  (semis 
    (NLS ))
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (BooleanLiteral ))))))))))))))))))

==================
Integer literals
==================
0
8
23
9847
---

(source_file 
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (IntegerLiteral )))))))))))))))))
  (semis 
    (NLS ))
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (IntegerLiteral )))))))))))))))))
  (semis 
    (NLS ))
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (IntegerLiteral )))))))))))))))))
  (semis 
    (NLS ))
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (IntegerLiteral ))))))))))))))))))

==================
Real literals
==================
0.0
-23.434
1e-10
4.3f
+53.9e-3F
---

(source_file 
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (RealLiteral )))))))))))))))))
  (semis 
    (NLS ))
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (unaryPrefix 
                              (prefixUnaryOperator 
                                (SUB )))
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (RealLiteral )))))))))))))))))
  (semis 
    (NLS ))
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (RealLiteral )))))))))))))))))
  (semis 
    (NLS ))
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (RealLiteral )))))))))))))))))
  (semis 
    (NLS ))
  (expression 
    (disjunction 
      (conjunction 
        (equality 
          (comparison 
            (infixOperation 
              (elvisExpression 
                (infixFunctionCall 
                  (rangeExpression 
                    (additiveExpression 
                      (multiplicativeExpression 
                        (asExpression 
                          (prefixUnaryExpression 
                            (unaryPrefix 
                              (prefixUnaryOperator 
                                (ADD )))
                            (postfixUnaryExpression 
                              (primaryExpression 
                                (literalConstant 
                                  (RealLiteral ))))))))))))))))))

